[package]
name = "rust_clojure"
version = "0.1.0"
authors = ["Cameron Cooper <zdot101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "*"
pest = "*"
pest_derive = "*"
nom = "*"
text_io = "*"
rand = "*"