[package]
name = "rust_clojure"
version = "0.1.0"
authors = ["Cameron Cooper <zdot101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0"
nom = "5.1"
rand = "0.7"
itertools= "0.9"
url = "2.1.1"
regex = "1.3.7"
reqwest = { version = "0.10.4", features = ["blocking"] }